modify nacos config

--- a/ratel-samples/product-service/src/main/resources/application.yml.sample
+++ b/ratel-samples/product-service/src/main/resources/application.yml.sample
@@ -1,10 +1,10 @@
 spring:
   application:
-    name: nacos-product-service
+    name: product-service
   cloud:
     nacos:
       discovery:
         server-addr: localhost:8848
-        namespace: c0797ecb-301e-4137-84b7-7f14964712df
+        namespace: ********-****-****-****-************
 server:
   port: 8081
