--- a/ratel-samples/order-service/src/main/resources/application.yml.sample
+++ b/ratel-samples/order-service/src/main/resources/application.yml.sample
@@ -5,6 +5,6 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
-        namespace: c0797ecb-301e-4137-84b7-7f14964712df
+        namespace: ********-****-****-****-************
 server:
   port: 8080
