--- a/ratel-samples/product-service/src/main/resources/application.yml.sample
+++ b/ratel-samples/product-service/src/main/resources/application.yml.sample
@@ -1,3 +1,6 @@
+server:
+  port: 0
+
 spring:
   application:
     name: product-service
@@ -6,5 +9,21 @@ spring:
       discovery:
         server-addr: localhost:8848
         namespace: ********-****-****-****-************
-server:
-  port: 8081
+  profiles:
+    active: dev
+  boot:
+    admin:
+      client:
+        url: localhost:8080
+management:
+  endpoints:
+    web:
+      exposure:
+        exclude: '*'
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+    info:
+      enabled: true
+
