add datasource init and oauth2 init

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <modules>
         <module>ratel-registry</module>
         <module>ratel-common</module>
-        <module>ratel-auth</module>
+        <module>ratel-authorization</module>
         <module>ratel-samples</module>
         <module>ratel-visual</module>
     </modules>
