--- a/ratel-authorization/pom.xml
+++ b/ratel-authorization/pom.xml
@@ -8,7 +8,11 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>ratel-auth</artifactId>
+    <artifactId>ratel-authorization</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ratel-authorization-oauth2</module>
+    </modules>
     <dependencies>
 
         <!--web模块-->
