--- a/ratel-common/pom.xml
+++ b/ratel-common/pom.xml
@@ -9,7 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ratel-common</artifactId>
+    <packaging>pom</packaging>
     <name>ratel-common</name>
+
+    <modules>
+        <module>ratel-common-datasource</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
