--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>ratel-authorization</module>
         <module>ratel-samples</module>
         <module>ratel-visual</module>
+        <module>ratel-gateway</module>
     </modules>
 
     <dependencies>
