add oauth server

--- a/ratel-authorization/ratel-authorization-oauth2/ratel-authorization-oauth2-resource-server/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2/ratel-authorization-oauth2-resource-server/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>ratel-authorization-oauth2-resource-server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
