--- a/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
@@ -8,8 +8,18 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <artifactId>ratel-authorization-oauth2-authserver</artifactId>
+
+
+    <!-- 服务发现-->
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
