--- a/ratel-common/pom.xml
+++ b/ratel-common/pom.xml
@@ -14,6 +14,9 @@
 
     <modules>
         <module>ratel-common-datasource</module>
+        <module>ratel-common-security</module>
+        <module>ratel-common-log</module>
+        <module>ratel-common-core</module>
     </modules>
 
     <properties>
