--- a/ratel-common/ratel-common-log/pom.xml
+++ b/ratel-common/ratel-common-log/pom.xml
@@ -23,6 +23,15 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
+
         <!--  用户权限模块的api  -->
         <dependency>
             <groupId>org.ratelframework</groupId>
