--- a/ratel-common/ratel-common-log/pom.xml
+++ b/ratel-common/ratel-common-log/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-upms-api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
