--- a/ratel-upms/ratel-upms-api/pom.xml
+++ b/ratel-upms/ratel-upms-api/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-common-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
