modify authorization modules

--- a/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
@@ -13,6 +13,14 @@ spring:
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
   profiles:
     active: dev
+  security:
+      user:
+        name: ratel
+        password: 123456
+    redis:
+      host: 120.78.190.213
+      password: 123456
+      port: 6379
   boot:
     admin:
       client:
