modify redis host

--- a/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
@@ -18,7 +18,7 @@ spring:
         name: ratel
         password: 123456
     redis:
-      host: 120.78.190.213
+      host: localhost
       password: 123456
       port: 6379
   boot:
