--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <spring-security-oauth.version>2.1.2.RELEASE</spring-security-oauth.version>
         <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
+        <hutool.version>4.5.10</hutool.version>
     </properties>
 
     <modules>
@@ -84,6 +85,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
