--- a/ratel-common/ratel-common-core/pom.xml
+++ b/ratel-common/ratel-common-core/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>ratel-common-core</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -22,7 +28,6 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>4.5.10</version>
         </dependency>
     </dependencies>
 
