--- a/ratel-common/ratel-common-security/pom.xml
+++ b/ratel-common/ratel-common-security/pom.xml
@@ -12,4 +12,27 @@
     <artifactId>ratel-common-security</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-common-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-upms-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <!--安全模块-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
+    </dependencies>
+
+
 </project>
