--- a/ratel-upms/ratel-upms-core/pom.xml
+++ b/ratel-upms/ratel-upms-core/pom.xml
@@ -15,6 +15,12 @@
 
         <dependency>
             <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-common-log</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ratelframework</groupId>
             <artifactId>ratel-common-security</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
