--- a/ratel-system/pom.xml
+++ b/ratel-system/pom.xml
@@ -14,6 +14,7 @@
     </description>
     <modules>
         <module>ratel-monitor</module>
+        <module>ratel-codegen</module>
     </modules>
     <build>
         <plugins>
