--- a/ratel-upms/ratel-upms-core/pom.xml
+++ b/ratel-upms/ratel-upms-core/pom.xml
@@ -32,7 +32,7 @@
         <!-- 配置中心 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-org.ratelframework.ratel.codegen.config</artifactId>
         </dependency>
 
         <!--web 模块-->
