modify upms code and adjust project structure

--- a/ratel-authorization/ratel-authorization-oauth2-resource-server/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-resource-server/src/main/resources/application.yml.sample
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: resource-org.ratelframework.ratel.codegen.service
+    name: resource-service
   cloud:
     nacos:
       discovery:
