--- a/ratel-common/ratel-common-core/pom.xml
+++ b/ratel-common/ratel-common-core/pom.xml
@@ -41,6 +41,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+
     </dependencies>
 
 
