--- a/ratel-samples/order-service/src/main/resources/application.yml.sample
+++ b/ratel-samples/order-service/src/main/resources/application.yml.sample
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: order-org.ratelframework.ratel.codegen.service
+    name: order-service
   cloud:
     nacos:
       discovery:
