--- a/ratel-gateway/src/main/resources/bootstrap.yml.sample
+++ b/ratel-gateway/src/main/resources/bootstrap.yml.sample
@@ -9,6 +9,7 @@ spring:
         enabled: true
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
         server-addr: localhost:8848
+        register-enabled: true
     gateway:
       enabled: true
       routes:
@@ -23,4 +24,10 @@ spring:
           predicates:
             - Path=/product/**
           filters:
+            - StripPrefix=1
+        - id: ratel-upms
+          uri: lb://ratel-upms
+          predicates:
+            - Path=/upms/**
+          filter:
             - StripPrefix=1
