--- a/ratel-upms/ratel-upms-core/src/main/resources/bootstrap.yml.sample
+++ b/ratel-upms/ratel-upms-core/src/main/resources/bootstrap.yml.sample
@@ -12,8 +12,8 @@ spring:
         file-extension: yml
         server-addr: localhost:8848
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
-        enabled: true
         group: ratel-upms
+        enabled: true
   profiles:
     active: dev
   main:
@@ -24,7 +24,10 @@ spring:
     username: root
     password: cdslyk912
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+    hikari:
+      max-lifetime: 30000
+      maximum-pool-size: 20
+      minimum-idle: 5
 server:
   port: 0
   servlet:
